Bug 103389 - FILEOPEN: DOCX export: Opening and resaving a DOCX document with two canvases produce a broken file.
Summary: FILEOPEN: DOCX export: Opening and resaving a DOCX document with two canvases...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-10-21 16:33 UTC by Tamás Zolnai
Modified: 2016-10-25 17:22 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Testfile with two canvases (13.66 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2016-10-21 16:36 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2016-10-21 16:33:29 UTC
Description:
After opening a DOCX file containing two empty drawing canvas in Writer and save back to DOCX format, MS Word can't open the saved DOCX file.

Steps to Reproduce:
1.Open the attached DOCX in Writer
2.Save it as a new DOCX file
3.Open the Writer saved DOCX with MS Word

Actual Results:  
MS Word can't open the exported document:

... cannot be opened because there are problems with the contents.
 [ OK ] [ Details <<< ]

Details:

The parameter is incorrect.
Location: Part: /word/document.xml, Line: 2, Column: 0

Expected Results:
MS Word opens the document.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Safari/537.36
Comment 1 Tamás Zolnai 2016-10-21 16:36:33 UTC
Created attachment 128132 [details]
Testfile with two canvases
Comment 2 Xisco Faulí 2016-10-22 15:51:57 UTC
COnfirmed in 

Version: 5.3.0.0.alpha0+
Build ID: 8974b0fafb18f9dd3f2c0e175a3255b80e4c249e
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and Word 2010
Comment 3 Xisco Faulí 2016-10-22 16:14:08 UTC
Regression introduced by

author	Andras Timar <andras.timar@collabora.com>	2015-02-05 21:36:24 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2015-02-06 09:37:36 (GMT)
commit b1751e6ed0fd6d6d26141e4405df92520e3c04cd (patch)
tree b82f085ec097c05c731309cb02dbe6318aaae7d0
parent 2c03d6fb053319e61ed600a3c22c4fd39da84e4d (diff)

bnc#637947 improve DrawingML export of custom shapes

Adding CC: to Andras Timar
Comment 4 Commit Notification 2016-10-25 00:38:57 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f7c61b08d526c79ecd1522dff79386059b6125e0

tdf#103389: Resaving a DOCX document with two canvases leads to a broken file.

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2016-10-25 07:42:22 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bc5c51e547e8ea971f90003657509848cc358724&h=libreoffice-5-2

tdf#103389: Resaving a DOCX document with two canvases leads to a broken file.

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.