tdf#103389: Resaving a DOCX document with two canvases leads to a broken file.

Make custom shape export more robust. In case of the test
document, WriteCustomGeometry is called, but this call
does not export anything, and so we get a shape without
any geometry in the DOCX file, which causes problem to MS Word.

Change-Id: Ie7a4e2b8a18bfddaeeb81425ae5f1de04140d43f